--- a/Docker-compose/dates/Dockerfile
+++ b/Docker-compose/dates/Dockerfile
@@ -1,6 +1,7 @@
 FROM openjdk:8
 COPY dates.jar /
-ENTRYPOINT ["java", "-jar", "dates.jar"]
 
 #Just for HEROKU
 CMD gunicorn --bind 0.0.0.0:$PORT wsgi
+
+ENTRYPOINT java -jar dates.jar
