--- a/heroku.yml
+++ b/heroku.yml
@@ -2,4 +2,4 @@ build:
   docker:
     dates: Docker-compose/dates/Dockerfile
 run:
-  web: bundle exec puma -C config/puma.rb
+  dates: bundle exec puma -C config/puma.rb
