--- a/heroku.yml
+++ b/heroku.yml
@@ -1,5 +1,3 @@
 build:
   docker:
-    dates: Docker-compose/dates/Dockerfile
-run:
-  web: java -jar Docker-compose/dates/*.jar
+    web: Docker-compose/dates/Dockerfile
