--- a/heroku.yml
+++ b/heroku.yml
@@ -1,3 +1,5 @@
 build:
   docker:
     web: Docker-compose/dates/Dockerfile
+run:
+  web: java -Dserver.port=$PORT $JAVA_OPTS -jar /Docker-compose/dates/*.jar
