--- a/Docker-compose/dates/Dockerfile
+++ b/Docker-compose/dates/Dockerfile
@@ -2,6 +2,6 @@ FROM openjdk:8
 COPY dates.jar /
 
 # Fire up Spring Boot app by default
-CMD [ "java $JAVA_OPTS -Djava.security.egd=file:/dev/./urandom -jar dates.jar" ]
+CMD [ "sh", "-c", "java $JAVA_OPTS -Djava.security.egd=file:/dev/./urandom -jar dates.jar" ]
 
 #ENTRYPOINT ["java", "-jar", "dates.jar"]
